# fake-auth0

./: Cargo.toml  Dockerfile
keys/: jwks.json  private-key.pem  public-key.pem
self_signed_certs/: cert.pem  key.pem
src/: main.rs
