[package]
name = "fake-auth0"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.15.1", features = ["v4"] }
config = "0.15.9"
serde = "1.0.218"
axum-server = { version = "0.7", features = ["tls-rustls"] }
axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["trace"] }
tower = "0.5.2"
